--- a/css/support.css
+++ b/css/support.css
@@ -87,7 +87,7 @@ html,body{
 .hgjg{position: relative;}
     .x-title{
         position: absolute;
-        top:1200px;height:80px;
+        top:1250px;height:80px;
         left:80px;line-height:30px;
         width: 600px;}
 /*part5代码*/
@@ -100,12 +100,17 @@ html,body{
     position: absolute;
     top:2000px;height:80px;
     left:80px;line-height:30px;
-    width: 600px;}
+    width: 450px;}
+.part>.bb{
+float:right;
+    margin-right: 100px;
+}
 
-
-    
+ /*part2 代码*/   
 .product{
-    background-size: 100%}
+    background-size: 100%;
+    margin-left: 80px;
+}
 .product>li:nth-child(6n)
 {
     margin-right: 0;
@@ -127,6 +132,7 @@ margin-right: 12px;
 margin-bottom: 20px;
 
 }
+
 .products{
     display: flex;
     flex-direction: row;
