修复大多bug，导航栏还需进一步完善

--- a/css/guide.css
+++ b/css/guide.css
@@ -9,14 +9,14 @@ html {
     margin: 0;
     padding: 0;
   }
-  
+
       .adver {
       height: 40px;
       background-color:#444444;
       text-align:right;
       vertical-align:text-top;
       padding-right: 320px;
-    
+    width: 100%;
       }
       .adver > span{
           color: #a8a8aa;
@@ -43,13 +43,13 @@ html {
           overflow: hidden;
           background-color: #313131;
           top: 0;
-          width: 1000px;
-   
+          width: 1600px;
+          
       }
       
       .guide>ul>li {
           float: left;
-          margin-left: 50px;
+          margin-left: 80px;    /*  padding-left: 100px;                左方缩进 */
           height: 40px;
       }
       
@@ -84,7 +84,7 @@ html {
         filter:alpha(opacity=60);
         cursor: pointer;
       }
-     .guide::after{
+     .guide::after{     
       display: block;
       content: "";
       clear: both;
@@ -174,3 +174,67 @@ html {
       0%   {background: #f6f6f6; left:500px; }
       100% {background: #f6f6f6; left:0px; }
   }
+
+  .products>ul>li dropdown {
+        position: relative;
+        display: inline-block;
+        
+        margin-right: 200px;
+    }
+    
+    .dropdown-content {
+        position: absolute;
+        display: none;
+        background-color:white;
+        min-width: 250px;
+        font-size:12px; 
+        box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
+        padding: 0,20px;
+        z-index: 1;
+    }
+    p:hover{
+        color: blue;
+    }
+    .dropdown-content2>p:hover{
+        display: block;
+    }
+    div{ 
+        cursor:pointer 
+        }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    .dropdown-content-1{
+        text-align:center;
+        color: silver;
+        font-size: 14px;
+        line-height: 50px;
+        margin: 0;
+        border-bottom:1px solid dimgray;
+    }
+    .dropdown-content-2,.dropdown-content-3,.dropdown-content-4,.dropdown-content-5,.dropdown-content-6{
+        color: dodgerblue;
+        height: 30px;
+        border-bottom:1px solid dimgray;
+        list-style: none;
+        padding-left: 1em;
+        text-align: left;
+    }
+    .dropdown-content-1:hover{
+        text-decoration:underline;
+    }
+    .dropdown-content-2:hover{
+        text-decoration:underline;
+    }
+    .dropdown-content-3:hover{
+        text-decoration:underline;
+    }
+    .dropdown-content-4:hover{
+        text-decoration:underline;
+    }
+    .dropdown-content-5:hover{
+        text-decoration:underline;
+    }
+    .dropdown-content-6:hover{
+        text-decoration:underline;
+    }
